# miniAlogger

./: pyproject.toml
minialogger/: miniAlogger.py
tests/: test_minialogger.py
