[tool.poetry]
name = "miniAlogger"
version = "0.1.0"
description = ""
authors = ["Nikita Alabugin <xanext@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.20.4"
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
